--- a/.github/workflows/nodei.js.yml
+++ b/.github/workflows/nodei.js.yml
@@ -50,7 +50,7 @@ jobs:
     - run: npm install -g npm
     - run: npm install
     - run: |
-        PGPASSWORD=pg123 psql -h localhost -U codex -d greet -a -f  './database.sql'
+        PGPASSWORD=pg123 psql -h localhost -U codex -d tests -a -f  './database.sql'
     - run: npm run build --if-present
     - run: npm test
     env: 
